Add monthly value in credit request

--- a/front/src/app/components/private/user/request/request-credit/request-credit.component.html
+++ b/front/src/app/components/private/user/request/request-credit/request-credit.component.html
@@ -62,7 +62,7 @@
             >
           </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-4">
           <label for="tasaInteres" class="form-label"
             >Tasa de Interés (%)</label
           >
@@ -73,7 +73,7 @@
             readonly
           />
         </div>
-        <div class="col-md-6">
+        <div class="col-md-4">
           <label for="valorCuotaQuincenal" class="form-label"
             >Valor cuota quincenal</label
           >
@@ -83,6 +83,10 @@
             class="form-control"
             readonly
           />
+        </div>
+        <div class="col-md-4">
+          <label for="valorMensual" class="form-label">Valor mensual</label>
+          <input type="text" formControlName="valorMensual" class="form-control" readonly />
         </div>
         <div class="col-12">
           <button
