--- a/front/src/app/components/private/user/components/user-info/user-info.component.html
+++ b/front/src/app/components/private/user/components/user-info/user-info.component.html
@@ -6,7 +6,7 @@
           Información Básica
         </button>
       </h2>
-      <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+      <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
         <div class="accordion-body">
             <app-user></app-user>
         </div>
@@ -18,7 +18,7 @@
           Información General
         </button>
       </h2>
-      <div id="collapseTwo" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+      <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
         <div class="accordion-body">
           <app-natural-person></app-natural-person>
         </div>
