--- a/front/src/app/components/private/user/credit-balance/credit-balance.component.html
+++ b/front/src/app/components/private/user/credit-balance/credit-balance.component.html
@@ -1,43 +1,52 @@
 <div class="container mt-5">
     <h1>Información sobre sus créditos vigentes</h1>
     <div class="card mt-3">
-        <p-table [value]="creditsBalance" [tableStyle]="{'min-width': '60rem'}">
-            <ng-template pTemplate="header">
-                <tr>
-                    <th pSortableColumn="idLineaCredito" style="width:30%">
-                        Línea Crédito <p-sortIcon field="idLineaCredito" />
-                    </th>
-                    <th pSortableColumn="cuotaActual" style="width:5%">
-                        Cuota Actual <p-sortIcon field="cuotaActual" />
-                    </th>
-                    <th pSortableColumn="cuotasTotales" style="width:5%">
-                        Total Cuotas <p-sortIcon field="cuotasTotales" />
-                    </th>
-                    <th pSortableColumn="valorSolicitado" style="width:10%">
-                        Valor Crédito <p-sortIcon field="valorSolicitado" />
-                    </th>
-                    <th pSortableColumn="valorPagado" style="width:10%">
-                        Total Pagado <p-sortIcon field="valorPagado" />
-                    </th>
-                    <th pSortableColumn="valorSaldo" style="width:10%">
-                        Saldo por Pagar <p-sortIcon field="valorSaldo" />
-                    </th>
-                    <th pSortableColumn="actualizadoEl" style="width:10%">
-                        Fecha Actualización <p-sortIcon field="actualizadoEl" />
-                    </th>
-                </tr>
-            </ng-template>
-            <ng-template pTemplate="body" let-credit>
-                <tr>
-                    <td>{{ credit.lineaCreditoNombre }}</td>
-                    <td>{{ credit.cuotaActual }}</td>
-                    <td>{{ credit.cuotasTotales }}</td>
-                    <td>{{ credit.valorSolicitado }}</td>
-                    <td>{{ credit.valorPagado }}</td>
-                    <td>{{ credit.valorSaldo }}</td>
-                    <td>{{ credit.actualizadoEl }}</td>
-                </tr>
-            </ng-template>
-        </p-table>
+          <div class="card-body">
+            <p-table [value]="creditsBalance" [tableStyle]="{'min-width': '60rem'}">
+                <ng-template pTemplate="header">
+                    <tr>
+                        <th pSortableColumn="idLineaCredito" style="width:30%">
+                            Línea Crédito <p-sortIcon field="idLineaCredito" />
+                        </th>
+                        <th pSortableColumn="valorSolicitado" style="width:10%">
+                            Valor Crédito <p-sortIcon field="valorSolicitado" />
+                        </th>
+                        <th pSortableColumn="cuotasTotales" style="width:5%">
+                            Plazo Total <p-sortIcon field="cuotasTotales" />
+                        </th>
+                        <th pSortableColumn="cuotasPendientes" style="width:5%">
+                            Cuotas Pendientes <p-sortIcon field="cuotasPendientes" />
+                        </th>
+                        <th pSortableColumn="cuotaActual" style="width:5%">
+                            Cuotas Facturadas <p-sortIcon field="cuotaActual" />
+                        </th>
+                        <th pSortableColumn="valorPagado" style="width:10%">
+                            Total Pagado <p-sortIcon field="valorPagado" />
+                        </th>
+                        <th pSortableColumn="valorSaldo" style="width:10%">
+                            Saldo por Pagar <p-sortIcon field="valorSaldo" />
+                        </th>
+                        <th pSortableColumn="actualizadoEl" style="width:10%">
+                            Fecha Actualización Información <p-sortIcon field="actualizadoEl" />
+                        </th>
+                    </tr>
+                </ng-template>
+                <ng-template pTemplate="body" let-credit>
+                    <tr>
+                        <td>{{ credit.lineaCreditoNombre }}</td>
+                        <td>{{ credit.valorSolicitado }}</td>
+                        <td>{{ credit.cuotasTotales }}</td>
+                        <td>{{ credit.cuotasPendientes }}</td>
+                        <td>{{ credit.cuotaActual }}</td>
+                        <td>{{ credit.valorPagado }}</td>
+                        <td>{{ credit.valorSaldo }}</td>
+                        <td>{{ credit.actualizadoEl }}</td>
+                    </tr>
+                </ng-template>
+            </p-table>
+            <div *ngIf="!creditsBalance || creditsBalance.length === 0" class="text-center mt-3">
+                No hay créditos vigentes disponibles.
+            </div>
+          </div>
     </div>
 </div>
