--- a/front/src/app/components/private/user/request/request-credit/request-credit.component.html
+++ b/front/src/app/components/private/user/request/request-credit/request-credit.component.html
@@ -1,7 +1,7 @@
 <p-toast></p-toast>
 <div class="container mt-5">
+  <h1>Solicitar crédito</h1>
   <div class="card">
-    <h1 class="card-header">Solicitud de crédito</h1>
     <div class="card-body">
       <form class="row g-3" [formGroup]="creditForm" (ngSubmit)="onSubmit()">
         <div class="col-md-12">
