--- a/front/src/app/components/private/user/credit-balance/credit-balance.component.html
+++ b/front/src/app/components/private/user/credit-balance/credit-balance.component.html
@@ -12,7 +12,7 @@
                             Valor Crédito <p-sortIcon field="valorSolicitado" />
                         </th>
                         <th pSortableColumn="cuotasTotales" style="width:5%">
-                            Plazo Total <p-sortIcon field="cuotasTotales" />
+                            Cuotas Totales <p-sortIcon field="cuotasTotales" />
                         </th>
                         <th pSortableColumn="cuotasPendientes" style="width:5%">
                             Cuotas Pendientes <p-sortIcon field="cuotasPendientes" />
