--- a/front/src/app/components/private/user/components/user-info/components/natural-person/natural-person.component.html
+++ b/front/src/app/components/private/user/components/user-info/components/natural-person/natural-person.component.html
@@ -1,31 +1,414 @@
 <form [formGroup]="natPersonForm" (ngSubmit)="onSubmit()">
-  <div class="row g-3">
-    <input type="hidden" formControlName="id" />
-    <div class="col-md-6">
-      <label for="idGenero" class="form-label">Género</label>
-      <select class="form-select" formControlName="idGenero">
-        <option *ngFor="let type of genders" [value]="type.id">
-          {{ type.nombre }}
-        </option>
-      </select>
+  <input type="hidden" formControlName="id" />
+  <h5>Información Personal</h5>
+  <div class="card">
+    <div class="card-body">
+      <div class="row g-3">
+        <div class="col-md-6">
+          <label for="idGenero" class="form-label">Género</label>
+          <select class="form-select" formControlName="idGenero">
+            <option *ngFor="let type of genders" [value]="type.id">
+              {{ type.nombre }}
+            </option>
+          </select>
+        </div>
+        <div class="col-md-6">
+          <label for="idEstadoCivil" class="form-label">Estado Civil</label>
+          <select class="form-select" formControlName="idEstadoCivil">
+            <option *ngFor="let type of maritalStatus" [value]="type.id">
+              {{ type.nombre }}
+            </option>
+          </select>
+        </div>
+        <div class="col-md-6">
+          <label for="fechaExpDoc" class="form-label"
+            >Fecha de expedición de documento</label
+          >
+          <input formControlName="fechaExpDoc" type="date" class="form-control" />
+        </div>
+        <div class="col-md-6">
+          <label for="departamentoExpDoc" class="form-label"
+            >Departamento de expedición del documento</label
+          >
+          <p-autoComplete
+            [suggestions]="filteredDepartments"
+            (completeMethod)="filterDepartment($event)"
+            field="nombre"
+            placeholder="Seleccione departamento"
+            formControlName="departamentoExpDoc"
+            (onSelect)="onDepartmentSelect()"
+            [dropdown]="true"
+          ></p-autoComplete>
+        </div>
+        <div class="col-md-6">
+          <label for="mpioExpDoc" class="form-label"
+            >Municipio de expedición del documento</label
+          >
+          <p-autoComplete
+            [suggestions]="filteredCities"
+            (completeMethod)="filterCity($event)"
+            field="nombre"
+            placeholder="Seleccione municipio"
+            formControlName="mpioExpDoc"
+            [dropdown]="true"
+          ></p-autoComplete>
+        </div>
+      </div>
     </div>
-    <div class="col-md-6">
-      <label for="fechaExpDoc" class="form-label">Fecha de expedición de documento</label>
-      <input formControlName="fechaExpDoc" type="date" class="form-control" />
+  </div>
+  <h5 class="mt-3">Información de Nacimiento</h5>
+  <div class="card">
+    <div class="card-body">
+      <div class="row g-3">
+        <div class="col-md-6">
+          <label for="fechaNacimiento" class="form-label"
+            >Fecha de nacimiento</label
+          >
+          <input
+            formControlName="fechaNacimiento"
+            type="date"
+            class="form-control"
+          />
+        </div>
+        <div class="col-md-6">
+          <label for="paisNacimiento" class="form-label">País de nacimiento</label>
+          <input
+            formControlName="paisNacimiento"
+            type="text"
+            class="form-control"
+          />
+        </div>
+        <div class="col-md-6">
+          <label for="departamentoNacimiento" class="form-label"
+            >Departamento de nacimiento</label
+          >
+          <input
+            formControlName="departamentoNacimiento"
+            type="text"
+            class="form-control"
+          />
+        </div>
+        <div class="col-md-6">
+          <label for="mpioNacimiento" class="form-label"
+            >Municipio de nacimiento</label
+          >
+          <input
+            formControlName="mpioNacimiento"
+            type="text"
+            class="form-control"
+          />
+        </div>
+        <div class="col-md-6">
+          <label for="otroLugarNacimiento" class="form-label"
+            >Lugar de nacimiento</label
+          >
+          <input
+            formControlName="otroLugarNacimiento"
+            type="text"
+            class="form-control"
+          />
+        </div>
+      </div>
     </div>
-    <div class="col-md-6">
-      <label for="departamentoExpDoc" class="form-label">Departamento de expedición del documento</label>
-      <p-autoComplete [suggestions]="filteredDepartments" (completeMethod)="filterDepartment($event)" field="nombre"
-        placeholder="Seleccione departamento" formControlName="departamentoExpDoc" (onSelect)="onDepartmentSelect()"
-        [dropdown]="true"></p-autoComplete>
+  </div>
+  <h5 class="mt-3">Información de Residencia</h5>
+  <div class="card">
+    <div class="card-body">
+      <div class="row g-3">
+        <div class="col-md-6">
+          <label for="departamentoResidencia" class="form-label"
+            >Departamento de residencia</label
+          >
+          <input
+            formControlName="departamentoResidencia"
+            type="text"
+            class="form-control"
+          />
+        </div>
+        <div class="col-md-6">
+          <label for="mpioResidencia" class="form-label"
+            >Municipio de residencia</label
+          >
+          <input
+            formControlName="mpioResidencia"
+            type="text"
+            class="form-control"
+          />
+        </div>
+        <div class="col-md-6">
+          <label for="idZonaResidencia" class="form-label"
+            >Zona de residencia</label
+          >
+          <select class="form-select" formControlName="idZonaResidencia">
+            <option *ngFor="let type of zones" [value]="type.id">
+              {{ type.nombre }}
+            </option>
+          </select>
+        </div>
+        <div class="col-md-6">
+          <label for="idTipoVivienda" class="form-label"
+            >Tipo de vivienda de residencia</label
+          >
+          <select class="form-select" formControlName="idTipoVivienda">
+            <option *ngFor="let type of houseTypes" [value]="type.id">
+              {{ type.nombre }}
+            </option>
+          </select>
+        </div>
+        <div class="col-md-6">
+          <label for="estrato" class="form-label">Estrato</label>
+          <select class="form-select" formControlName="estrato">
+            <option value="1">Estrato 1</option>
+            <option value="2">Estrato 2</option>
+            <option value="3">Estrato 3</option>
+            <option value="4">Estrato 4</option>
+            <option value="5">Estrato 5</option>
+            <option value="6">Estrato 6</option>
+          </select>
+        </div>
+        <div class="col-md-6">
+          <label for="direccionResidencia" class="form-label"
+            >Dirección de residencia</label
+          >
+          <input
+            formControlName="direccionResidencia"
+            type="text"
+            class="form-control"
+          />
+        </div>
+        <div class="col-md-6">
+          <label for="aniosAntigVivienda" class="form-label"
+            >Años de antigüedad en la vivienda de residencia</label
+          >
+          <input
+            formControlName="aniosAntigVivienda"
+            type="number"
+            class="form-control"
+          />
+        </div>
+      </div>
     </div>
-    <div class="col-md-6">
-      <label for="mpioExpDoc" class="form-label">Municipio de expedición del documento</label>
-      <p-autoComplete [suggestions]="filteredCities" (completeMethod)="filterCity($event)" field="nombre"
-        placeholder="Seleccione municipio" formControlName="mpioExpDoc" [dropdown]="true"></p-autoComplete>
+  </div>
+  <h5 class="mt-3">Información Familiar</h5>
+  <div class="card">
+    <div class="card-body">
+      <div class="row g-3">
+        <div class="col-md-6">
+          <label for="cabezaFamilia" class="form-label"
+            >¿Es cabeza de familia?</label
+          >
+          <select class="form-select" formControlName="cabezaFamilia">
+            <option value="SI">Sí</option>
+            <option value="NO">No</option>
+          </select>
+        </div>
+        <div class="col-md-6">
+          <label for="personasACargo" class="form-label"
+            >Número de personas a cargo</label
+          >
+          <input
+            formControlName="personasACargo"
+            type="number"
+            class="form-control"
+          />
+        </div>
+        <div class="col-md-6">
+          <label for="tieneHijos" class="form-label">¿Tiene hijos?</label>
+          <select class="form-select" formControlName="tieneHijos">
+            <option value="SI">Sí</option>
+            <option value="NO">No</option>
+          </select>
+        </div>
+        <div class="col-md-6">
+          <label for="numeroHijos" class="form-label">Número de hijos</label>
+          <input formControlName="numeroHijos" type="number" class="form-control" />
+        </div>
+      </div>
     </div>
-    <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-      <button class="btn btn-primary me-md-2" type="submit">Guardar</button>
+  </div>
+  <h5 class="mt-3">Contacto</h5>
+  <div class="card">
+    <div class="card-body">
+      <div class="row g-3">
+        <div class="col-md-6">
+          <label for="correoElectronico" class="form-label"
+            >Correo electrónico</label
+          >
+          <input
+            formControlName="correoElectronico"
+            type="email"
+            class="form-control"
+          />
+        </div>
+        <div class="col-md-6">
+          <label for="telefono" class="form-label">Número de teléfono</label>
+          <br />
+          <p-inputMask
+            mask="999-9999"
+            formControlName="telefono"
+            placeholder="999-9999"
+          />
+        </div>
+        <div class="col-md-6">
+          <label for="celular" class="form-label">Número de celular</label>
+          <br />
+          <p-inputMask
+            mask="999-999-9999"
+            formControlName="celular"
+            placeholder="999-999-9999"
+          />
+        </div>
+        <div class="col-md-6">
+          <label for="telefonoOficina" class="form-label">Número de teléfono de oficina</label>
+          <br />
+          <p-inputMask
+            mask="999-999-9999"
+            formControlName="telefonoOficina"
+            placeholder="999-999-9999"
+          />
+        </div>
+      </div>
     </div>
+  </div>
+  <h5 class="mt-3">Información Educativa y Laboral</h5>
+  <div class="card">
+    <div class="card-body">
+      <div class="row g-3">
+        <div class="col-md-6">
+          <label for="idNivelEducativo" class="form-label">Nivel de educación</label>
+          <select class="form-select" formControlName="idNivelEducativo">
+            <option *ngFor="let type of educationLevels" [value]="type.id">
+              {{ type.nombre }}
+            </option>
+          </select>
+        </div>
+        <div class="col-md-6">
+          <label for="profesion" class="form-label"
+            >Profesión</label
+          >
+          <input
+            formControlName="profesion"
+            type="text"
+            class="form-control"
+          />
+        </div>
+        <div class="col-md-6">
+          <label for="ocupacionOficio" class="form-label"
+            >Ocupación u oficio</label
+          >
+          <input
+            formControlName="ocupacionOficio"
+            type="text"
+            class="form-control"
+          />
+        </div>
+        <div class="col-md-6">
+          <label for="idEmpresaLabor" class="form-label">Empresa donde labora</label>
+          <select class="form-select" formControlName="idEmpresaLabor">
+            <option *ngFor="let type of companies" [value]="type.id">
+              {{ type.nombre }}
+            </option>
+          </select>
+        </div>
+        <div class="col-md-6">
+          <label for="idTipoContrato" class="form-label">Tipo de contrato</label>
+          <select class="form-select" formControlName="idTipoContrato">
+            <option *ngFor="let type of contractTypes" [value]="type.id">
+              {{ type.nombre }}
+            </option>
+          </select>
+        </div>
+        <div class="col-md-6">
+          <label for="dependenciaEmpresa" class="form-label"
+            >Dependencia a la que hace parte</label
+          >
+          <input
+            formControlName="dependenciaEmpresa"
+            type="text"
+            class="form-control"
+          />
+        </div>
+        <div class="col-md-6">
+          <label for="cargoOcupa" class="form-label"
+            >Cargo que ocupa</label
+          >
+          <input
+            formControlName="cargoOcupa"
+            type="text"
+            class="form-control"
+          />
+        </div>
+        <div class="col-md-6">
+          <label for="aniosAntigEmpresa" class="form-label"
+            >Años de antigüedad en la empresa</label
+          >
+          <input
+            formControlName="aniosAntigEmpresa"
+            type="number"
+            class="form-control"
+          />
+        </div>
+        <div class="col-md-6">
+          <label for="mesesAntigEmpresa" class="form-label"
+            >Meses de antigüedad en la empresa</label
+          >
+          <input
+            formControlName="mesesAntigEmpresa"
+            type="number"
+            class="form-control"
+          />
+        </div>
+        <div class="col-md-6">
+          <label for="mesSaleVacaciones" class="form-label"
+            >Mes en el que sale a vacaciones</label
+          >
+          <input
+            formControlName="mesSaleVacaciones"
+            type="text"
+            class="form-control"
+          />
+        </div>
+      </div>
+    </div>
+  </div>
+  <h5 class="mt-3">Información de Emergencia</h5>
+  <div class="card">
+    <div class="card-body">
+      <div class="row g-3">
+        <div class="col-md-6">
+          <label for="nombreEmergencia" class="form-label"
+            >Nombre completo</label
+          >
+          <input
+            formControlName="nombreEmergencia"
+            type="text"
+            class="form-control"
+          />
+        </div>
+        <div class="col-md-6">
+          <label for="numeroCedulaEmergencia" class="form-label"
+            >Número de documento</label
+          >
+          <input
+            formControlName="numeroCedulaEmergencia"
+            type="text"
+            class="form-control"
+          />
+        </div>
+        <div class="col-md-6">
+          <label for="numeroCelularEmergencia" class="form-label"
+            >Número de celular</label
+          >
+          <input
+            formControlName="numeroCelularEmergencia"
+            type="text"
+            class="form-control"
+          />
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="d-grid gap-2 mt-3">
+    <button class="btn btn-primary" type="submit">Guardar</button>
   </div>
 </form>
