--- a/front/src/app/components/private/user/components/user-info/components/family-information/family-information.component.html
+++ b/front/src/app/components/private/user/components/user-info/components/family-information/family-information.component.html
@@ -1,1 +1,155 @@
-<p>family-information works!</p>
+<div class="container">
+    <h5>Familiares</h5>
+    <p-table
+      [value]="family"
+      styleClass="p-datatable-striped"
+      [tableStyle]="{ 'min-width': '60rem' }"
+    >
+      <ng-template pTemplate="header">
+        <tr>
+          <th pSortableColumn="nombreCompleto" style="width: 20%">
+            Nombre Completo <p-sortIcon field="nombreCompleto" />
+          </th>
+          <th pSortableColumn="idTipoDocumento" style="width: 20%">
+            Tipo Doc. <p-sortIcon field="idTipoDocumento" />
+          </th>
+          <th pSortableColumn="numeroDocumento" style="width: 20%">
+            No. Doc. <p-sortIcon field="numeroDocumento" />
+          </th>
+          <th pSortableColumn="idMpioExpDoc" style="width: 20%">
+            Mpio. Exp. <p-sortIcon field="idMpioExpDoc" />
+          </th>
+          <th style="width: 20%">Acciones</th>
+        </tr>
+      </ng-template>
+      <ng-template pTemplate="body" let-familiar>
+        <tr>
+          <td>{{ familiar.nombreCompleto }}</td>
+          <td>{{ familiar.parentescoNombre }}</td>
+          <td>{{ familiar.numeroDocumento }}</td>
+          <td>{{ familiar.idMpioExpDoc }}</td>
+          <td>
+            <button class="btn btn-warning" (click)="editarFamiliar(familiar)">
+              Editar
+            </button>
+            <button
+              class="btn btn-danger"
+              (click)="eliminarFamiliar(familiar.id)"
+            >
+              Eliminar
+            </button>
+          </td>
+        </tr>
+      </ng-template>
+    </p-table>
+
+  <h5 class="mt-3">Agregar familiar</h5>
+  <form [formGroup]="familiarForm" (ngSubmit)="guardarFamiliar()">
+    <div class="row g-3">
+      <input type="hidden" formControlName="id" />
+      <div class="col-md-6">
+        <label for="nombreCompleto" class="form-label">Nombre completo</label>
+        <input
+          formControlName="nombreCompleto"
+          placeholder="Escribe el nombre completo"
+          type="text"
+          class="form-control"
+        />
+      </div>
+      <div class="col-md-6">
+        <label for="idTipoDocumento" class="form-label"
+          >Tipo de documento</label
+        >
+        <select class="form-select" formControlName="idTipoDocumento">
+          <option value="" disabled>Seleccione...</option>
+          <option *ngFor="let type of documentTypes" [value]="type.id">
+            {{ type.nombre }}
+          </option>
+        </select>
+      </div>
+      <div class="col-md-6">
+        <label for="numeroDocumento" class="form-label"
+          >Número de documento</label
+        >
+        <input
+          formControlName="numeroDocumento"
+          placeholder="Escribe el número de documento"
+          type="text"
+          class="form-control"
+        />
+      </div>
+      <div class="col-md-6">
+        <label for="idMpioExpDoc" class="form-label"
+          >Municipio de Expedición del documento</label
+        >
+        <input
+          formControlName="idMpioExpDoc"
+          type="text"
+          class="form-control"
+        />
+      </div>
+      <div class="col-md-6">
+        <label for="idParentesco" class="form-label">Parentesco</label>
+        <select class="form-select" formControlName="idParentesco">
+          <option value="" disabled>Seleccione...</option>
+          <option *ngFor="let type of relationships" [value]="type.id">
+            {{ type.nombre }}
+          </option>
+        </select>
+      </div>
+      <div class="col-md-6">
+        <label for="idGenero" class="form-label">Género</label>
+        <select class="form-select" formControlName="idGenero">
+          <option value="" disabled>Seleccione...</option>
+          <option *ngFor="let type of genders" [value]="type.id">
+            {{ type.nombre }}
+          </option>
+        </select>
+      </div>
+      <div class="col-md-6">
+        <label for="fechaNacimiento" class="form-label"
+          >Fecha de nacimiento</label
+        >
+        <input
+          formControlName="fechaNacimiento"
+          type="date"
+          class="form-control"
+        />
+      </div>
+      <div class="col-md-6">
+        <label for="idNivelEducativo" class="form-label">Nivel educativo</label>
+        <select class="form-select" formControlName="idNivelEducativo">
+          <option value="" disabled>Seleccione...</option>
+          <option *ngFor="let type of educationLevels" [value]="type.id">
+            {{ type.nombre }}
+          </option>
+        </select>
+      </div>
+      <div class="col-md-6">
+        <label for="trabaja" class="form-label">¿Trabaja?</label>
+        <select class="form-select" formControlName="trabaja">
+          <option value="" disabled>Seleccione...</option>
+          <option value="SI">Sí</option>
+          <option value="NO">No</option>
+        </select>
+      </div>
+      <div class="col-md-6">
+        <label for="celular" class="form-label">Número de celular</label>
+        <input formControlName="celular" type="text" class="form-control" />
+      </div>
+      <div class="d-grid gap-2">
+        <button class="btn btn-primary" type="submit">
+          {{ editMode ? "Actualizar" : "Agregar" }}
+        </button>
+        <button
+          class="btn btn-secondary"
+          type="button"
+          (click)="cancelarEdicion()"
+          *ngIf="editMode"
+        >
+          Cancelar
+        </button>
+      </div>
+    </div>
+  </form>
+</div>
