Add all info user components

--- a/front/src/app/components/private/user/components/user-info/user-info.component.html
+++ b/front/src/app/components/private/user/components/user-info/user-info.component.html
@@ -84,11 +84,80 @@
       </h2>
       <div
         id="collapseFour"
-        class="accordion-collapse collapse show"
+        class="accordion-collapse collapse"
         data-bs-parent="#accordionExample"
       >
         <div class="accordion-body">
           <app-family-information></app-family-information>
+        </div>
+      </div>
+    </div>
+    <div class="accordion-item">
+      <h2 class="accordion-header">
+        <button
+          class="accordion-button collapsed"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#collapseFive"
+          aria-expanded="false"
+          aria-controls="collapseFive"
+        >
+          Información Referencias
+        </button>
+      </h2>
+      <div
+        id="collapseFive"
+        class="accordion-collapse collapse"
+        data-bs-parent="#accordionExample"
+      >
+        <div class="accordion-body">
+          <app-recommendation></app-recommendation>
+        </div>
+      </div>
+    </div>
+    <div class="accordion-item">
+      <h2 class="accordion-header">
+        <button
+          class="accordion-button collapsed"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#collapseSix"
+          aria-expanded="false"
+          aria-controls="collapseSix"
+        >
+          Información Operaciones Internacionales
+        </button>
+      </h2>
+      <div
+        id="collapseSix"
+        class="accordion-collapse collapse show"
+        data-bs-parent="#accordionExample"
+      >
+        <div class="accordion-body">
+          <app-international-transactions></app-international-transactions>
+        </div>
+      </div>
+    </div>
+    <div class="accordion-item">
+      <h2 class="accordion-header">
+        <button
+          class="accordion-button collapsed"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#collapseSeven"
+          aria-expanded="false"
+          aria-controls="collapseSeven"
+        >
+          Información Personas Publicamente Expuestas
+        </button>
+      </h2>
+      <div
+        id="collapseSeven"
+        class="accordion-collapse collapse"
+        data-bs-parent="#accordionExample"
+      >
+        <div class="accordion-body">
+          <app-public-person></app-public-person>
         </div>
       </div>
     </div>
