--- a/front/src/app/components/private/user/components/user-info/components/family-information/family-information.component.html
+++ b/front/src/app/components/private/user/components/user-info/components/family-information/family-information.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+  <p-toast></p-toast>
   <!-- Button trigger modal -->
   <button
     type="button"
@@ -222,6 +223,8 @@
             <button
               class="btn btn-primary"
               type="submit"
+              [disabled]="familiarForm.invalid"
+              data-bs-dismiss="modal"
             >
               {{ editMode ? "Actualizar" : "Agregar" }}
             </button>
