Fix create info error in components

--- a/front/src/app/components/private/user/components/user-info/components/family-information/family-information.component.html
+++ b/front/src/app/components/private/user/components/user-info/components/family-information/family-information.component.html
@@ -80,6 +80,9 @@
       </tr>
     </ng-template>
   </p-table>
+  <div *ngIf="!family || family.length === 0" class="text-center mt-3">
+    No hay familiares registrados.
+  </div>
 
   <!-- Modal -->
   <div
