--- a/front/src/app/components/private/user/components/user-info/components/international-transactions/international-transactions.component.html
+++ b/front/src/app/components/private/user/components/user-info/components/international-transactions/international-transactions.component.html
@@ -4,7 +4,7 @@
     <input type="hidden" formControlName="id" />
     <div class="col-md-6">
         <label for="transaccionesMonedaExtranjera" class="form-label">¿Realiza transacciones en monedas extranjeras?</label>
-        <select class="form-select" formControlName="transaccionesMonedaExtranjera" (change)="onTransaccionesChange($event)">
+        <select class="form-select" formControlName="transaccionesMonedaExtranjera">
           <option value="" selected disabled>Seleccione...</option>
           <option value="SI">Sí</option>
           <option value="NO">No</option>
@@ -20,7 +20,7 @@
     </div>
     <div class="col-md-6">
       <label for="cuentasMonedaExtranjera" class="form-label">¿Tiene cuentas en moneda extranjera?</label>
-      <select class="form-select" formControlName="cuentasMonedaExtranjera" (change)="onCuentasChange($event)">
+      <select class="form-select" formControlName="cuentasMonedaExtranjera">
         <option value="" selected disabled>Seleccione...</option>
         <option value="SI">Sí</option>
         <option value="NO">No</option>
