--- a/front/src/app/components/private/user/components/user-info/components/public-person/public-person.component.html
+++ b/front/src/app/components/private/user/components/user-info/components/public-person/public-person.component.html
@@ -62,13 +62,13 @@
         >
         <br>
         <div class="form-check form-check-inline">
-          <input class="form-check-input" type="radio" formControlName="funcionesPublicas" id="funcionesPublicasSi" value="SI" (change)="onPublicFunctionsChange()">
+          <input class="form-check-input" type="radio" formControlName="funcionesPublicas" id="funcionesPublicasSi" value="SI">
           <label class="form-check-label" for="funcionesPublicasSi">
             Sí
           </label>
         </div>
         <div class="form-check form-check-inline">
-          <input class="form-check-input" type="radio" formControlName="funcionesPublicas" id="funcionesPublicasNo" value="NO" checked (change)="onPublicFunctionsChange()">
+          <input class="form-check-input" type="radio" formControlName="funcionesPublicas" id="funcionesPublicasNo" value="NO" checked>
           <label class="form-check-label" for="funcionesPublicasNo">
             No
           </label>
