--- a/front/src/app/components/private/user/components/user-info/components/recommendation/recommendation.component.html
+++ b/front/src/app/components/private/user/components/user-info/components/recommendation/recommendation.component.html
@@ -68,6 +68,12 @@
       </tr>
     </ng-template>
   </p-table>
+  <div
+    *ngIf="!recommendations || recommendations.length === 0"
+    class="text-center mt-3"
+  >
+    No hay referencias registradas.
+  </div>
 
   <!-- Modal -->
   <div
@@ -80,7 +86,9 @@
     <div class="modal-dialog modal-fullscreen-sm-down">
       <div class="modal-content">
         <div class="modal-header">
-          <h1 class="modal-title fs-5" id="recommendationModalLabel">Referencia</h1>
+          <h1 class="modal-title fs-5" id="recommendationModalLabel">
+            Referencia
+          </h1>
           <button
             type="button"
             class="btn-close"
@@ -105,9 +113,7 @@
                 />
               </div>
               <div class="col-md-12">
-                <label for="parentesco" class="form-label"
-                  >Parentesco</label
-                >
+                <label for="parentesco" class="form-label">Parentesco</label>
                 <input
                   formControlName="parentesco"
                   placeholder="Escribe el parentesco"
@@ -121,15 +127,16 @@
                 >
                 <select class="form-select" formControlName="idTipoReferencia">
                   <option value="" disabled selected>Seleccione...</option>
-                  <option *ngFor="let type of recommendationTypes" [value]="type.id">
+                  <option
+                    *ngFor="let type of recommendationTypes"
+                    [value]="type.id"
+                  >
                     {{ type.nombre }}
                   </option>
                 </select>
               </div>
               <div class="col-md-6">
-                <label for="idMunicipio" class="form-label"
-                  >Municipio</label
-                >
+                <label for="idMunicipio" class="form-label">Municipio</label>
                 <input
                   formControlName="idMunicipio"
                   type="text"
@@ -147,9 +154,7 @@
                 />
               </div>
               <div class="col-md-6">
-                <label for="telefono" class="form-label"
-                  >Teléfono</label
-                >
+                <label for="telefono" class="form-label">Teléfono</label>
                 <input
                   formControlName="telefono"
                   type="text"
@@ -178,7 +183,12 @@
             >
               Cancelar
             </button>
-            <button class="btn btn-primary" type="submit" [disabled]="recommendationForm.invalid" data-bs-dismiss="modal">
+            <button
+              class="btn btn-primary"
+              type="submit"
+              [disabled]="recommendationForm.invalid"
+              data-bs-dismiss="modal"
+            >
               {{ editMode ? "Actualizar" : "Agregar" }}
             </button>
           </div>
