Fix cities listed

--- a/front/src/app/components/private/user/components/user-info/components/financial-info/financial-info.component.html
+++ b/front/src/app/components/private/user/components/user-info/components/financial-info/financial-info.component.html
@@ -7,7 +7,12 @@
     </div>
     <div class="col-md-6">
       <label for="idTipoCuentaBanc" class="form-label">Tipo de Cuenta Bancaria</label>
-      <input formControlName="idTipoCuentaBanc" type="text" class="form-control" />
+      <select class="form-select" formControlName="idTipoCuentaBanc">
+        <option value="" disabled selected>Seleccione..</option>
+        <option *ngFor="let type of bankAccountTypes" [value]="type.id">
+          {{ type.nombre }}
+        </option>
+      </select>
     </div>
     <div class="col-md-6">
       <label for="numeroCuentaBanc" class="form-label">Número de Cuenta Bancaria</label>
@@ -15,15 +20,34 @@
     </div>
     <div class="col-md-6">
       <label for="ingresosMensuales" class="form-label">Ingresos Mensuales</label>
-      <input formControlName="ingresosMensuales" type="text" class="form-control" (input)="formatCurrencyInput($event, 'ingresosMensuales')" />
+      <br>
+      <p-inputNumber 
+        formControlName="ingresosMensuales"
+        inputId="integeronly"
+             
+            mode="currency" 
+            currency="COP" 
+            locale="es-CO" /> 
     </div>
     <div class="col-md-6">
       <label for="primaProductividad" class="form-label">Prima de Productividad</label>
-      <input formControlName="primaProductividad" type="text" class="form-control" (input)="formatCurrencyInput($event, 'primaProductividad')" />
+      <br>
+      <p-inputNumber 
+        formControlName="primaProductividad"
+            inputId="currency-co" 
+            mode="currency" 
+            currency="COP" 
+            locale="es-CO" />
     </div>
     <div class="col-md-6">
       <label for="otrosIngresosMensuales" class="form-label">Otros Ingresos Mensuales</label>
-      <input formControlName="otrosIngresosMensuales" type="text" class="form-control" (input)="formatCurrencyInput($event, 'otrosIngresosMensuales')" />
+      <br>
+      <p-inputNumber 
+        formControlName="otrosIngresosMensuales"
+            inputId="currency-co" 
+            mode="currency" 
+            currency="COP" 
+            locale="es-CO" />
     </div>
     <div class="col-md-6">
       <label for="conceptoOtrosIngresosMens" class="form-label">Concepto de Otros Ingresos Mensuales</label>
@@ -31,42 +55,86 @@
     </div>
     <div class="col-md-6">
       <label for="totalIngresosMensuales" class="form-label">Total de Ingresos Mensuales</label>
-      <input formControlName="totalIngresosMensuales" type="text" class="form-control" (input)="formatCurrencyInput($event, 'totalIngresosMensuales')" />
+      <br>
+      <p-inputNumber 
+        formControlName="totalIngresosMensuales"
+            inputId="currency-co" 
+            mode="currency" 
+            currency="COP" 
+            locale="es-CO" />
     </div>
     <div class="col-md-6">
       <label for="egresosMensuales" class="form-label">Egresos Mensuales</label>
-      <input formControlName="egresosMensuales" type="text" class="form-control" (input)="formatCurrencyInput($event, 'egresosMensuales')" />
+      <br>
+      <p-inputNumber 
+        formControlName="egresosMensuales"
+            inputId="currency-co" 
+            mode="currency" 
+            currency="COP" 
+            locale="es-CO" />
     </div>
     <div class="col-md-6">
       <label for="obligacionFinanciera" class="form-label">Obligación Financiera</label>
-      <input formControlName="obligacionFinanciera" type="text" class="form-control" (input)="formatCurrencyInput($event, 'obligacionFinanciera')" />
+      <br>
+      <p-inputNumber 
+        formControlName="obligacionFinanciera"
+            inputId="currency-co" 
+            mode="currency" 
+            currency="COP" 
+            locale="es-CO" />
     </div>
     <div class="col-md-6">
       <label for="otrosEgresosMensuales" class="form-label">Otros Egresos Mensuales</label>
-      <input formControlName="otrosEgresosMensuales" type="text" class="form-control" (input)="formatCurrencyInput($event, 'otrosEgresosMensuales')" />
+      <br>
+      <p-inputNumber 
+        formControlName="otrosEgresosMensuales"
+            inputId="currency-co" 
+            mode="currency" 
+            currency="COP" 
+            locale="es-CO" />
     </div>
     <div class="col-md-6">
       <label for="totalEgresosMensuales" class="form-label">Total de Egresos Mensuales</label>
-      <input formControlName="totalEgresosMensuales" type="text" class="form-control" (input)="formatCurrencyInput($event, 'totalEgresosMensuales')" />
+      <br>
+      <p-inputNumber 
+        formControlName="totalEgresosMensuales"
+            inputId="currency-co" 
+            mode="currency" 
+            currency="COP" 
+            locale="es-CO" />
     </div>
     <div class="col-md-6">
       <label for="totalActivos" class="form-label">Total de Activos</label>
-      <input formControlName="totalActivos" type="text" class="form-control" (input)="formatCurrencyInput($event, 'totalActivos')" />
+      <br>
+      <p-inputNumber 
+        formControlName="totalActivos"
+            inputId="currency-co" 
+            mode="currency" 
+            currency="COP" 
+            locale="es-CO" />
     </div>
     <div class="col-md-6">
       <label for="totalPasivos" class="form-label">Total de Pasivos</label>
-      <input formControlName="totalPasivos" type="text" class="form-control" (input)="formatCurrencyInput($event, 'totalPasivos')" />
+      <br>
+      <p-inputNumber 
+        formControlName="totalPasivos"
+            inputId="currency-co" 
+            mode="currency" 
+            currency="COP" 
+            locale="es-CO" />
     </div>
     <div class="col-md-6">
       <label for="totalPatrimonio" class="form-label">Total de Patrimonio</label>
-      <input formControlName="totalPatrimonio" type="text" class="form-control" (input)="formatCurrencyInput($event, 'totalPatrimonio')" />
-    </div>
-    <div class="col-md-6">
-      <label for="montoMaxAhorro" class="form-label">Monto Máximo de Ahorro</label>
-      <input formControlName="montoMaxAhorro" type="text" class="form-control" (input)="formatCurrencyInput($event, 'montoMaxAhorro')" />
+      <br>
+      <p-inputNumber 
+        formControlName="totalPatrimonio"
+            inputId="currency-co" 
+            mode="currency" 
+            currency="COP" 
+            locale="es-CO" />
     </div>
     <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-      <button class="btn btn-primary me-md-2" type="submit">Guardar</button>
+      <button class="btn btn-primary me-md-2" [disabled]="financialForm.invalid" type="submit">Guardar</button>
     </div>
   </div>
 </form>
